--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
     <section class="about">
       <div class="container">
         <h2>Hello world</h2>
+        <p>JAVOHIR</p>
       </div>
     </section>
+
+
+
+
   </main>
 
   <footer>
